# vaultwise

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  index.html  package-lock.json  package.json  project_scope.md  tailwind.config.js  vite.config.ts
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: accounts.py  categories.py  ml.py  statements.py  transactions.py
backend/app/services/: categorization_rules.py  ingestion.py  ml_classifier.py  normalization.py  pdf_detection.py  pdf_text.py  redaction.py  seeds.py
backend/app/services/parsers/: base.py  generic_table_parser.py  local_private_parser.py
backend/app/tests/: conftest.py  test_api_transactions.py  test_ml.py  test_normalization.py  test_pdf_detection.py  test_rules.py
backend/scripts/: generate_sanitized_demo.py  privacy_check.py  register_local_statements.py
src/: App.tsx  styles.css  types.ts
src/data/: fixtures.ts  sanitizedFixtures.ts
src/services/: financeData.ts
