[project]
name = "smart-home-finance-backend"
version = "0.1.0"
description = "Local-first FastAPI backend for private bank statement ingestion."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "joblib>=1.4.2",
  "numpy>=2.1.0",
  "pandas>=2.2.3",
  "pdfplumber>=0.11.4",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "pymupdf>=1.24.14",
  "python-multipart>=0.0.17",
  "scikit-learn>=1.5.2",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "reportlab>=4.2.5",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
